--- a/styles/main.css
+++ b/styles/main.css
@@ -70,3 +70,45 @@ body {
   color:rgb(43, 41, 41);
 }
 
+#back-button {
+  width:8vw;
+  height:2vw;
+  background-color:#04536d;
+  position:absolute;
+  left:46vw;
+  margin-top:5.5vw;
+  border-radius: 11px;
+  font-family:verdana;
+  padding-top: .5vw;
+  box-shadow: 1px 3.5px 3px 0px rgb(27, 26, 26);
+}
+a{
+  text-decoration: none;
+  text-align: center;
+  display:inline-block;
+  color:gold;
+  font-size:1.1vw;
+}
+a:hover{
+ }
+ a {
+  -webkit-transition: 0.4s;
+  -moz-transition:  0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
+  text-decoration: none;
+}
+a:hover {
+  cursor: pointer;
+  color: rgba(154, 182, 196, 0.582);
+  opacity:0.7;
+  -webkit-transition: 0.4s;
+  -moz-transition:  0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
+}
+.darken{
+  width:210px;
+  height:115px;
+  margin-left:-40px;
+}
