--- a/styles/main.css
+++ b/styles/main.css
@@ -1,17 +1,8 @@
 
-/* Me */
-
-#attribution {
-  color: white;
-  margin-top: 1vw;
-  margin-left: 1vw;
-  font-size: 1vw;
-}
-
 /* Background */
 
 body {
-  background-color: #192768e8 ;
+  background-color: #4457a8;
   }
 
   /* Quote Container */
@@ -48,6 +39,7 @@ body {
 
 #new-quote-button{
   margin-right: 8vw;
+  width:11vw;
   color: black;
   height: 4vw;
   font-size:1.5vw;
@@ -57,18 +49,26 @@ body {
 #twit-button {
   color: black;
   height: 4vw;
+  width:11vw;
   font-size:1.5vw;
   border-radius: .1vw;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
  }
 .btn {
   box-shadow: 2px 3px 4px 6px #0001532c;
   transition: 0.3s;
 }
+@media only screen and (min-width:900px) {
  .btn:hover {
   background-color: rgb(175, 166, 166);
   border-color: black;
   color:rgb(43, 41, 41);
+ }
 }
+/* button {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+
+} */
 
 #back-button {
   width:8vw;
@@ -79,8 +79,8 @@ body {
   margin-top:5.5vw;
   border-radius: 11px;
   font-family:verdana;
-  padding-top: .5vw;
-  box-shadow: 1px 3.5px 3px 0px rgb(27, 26, 26);
+  padding-top: .7vw;
+  box-shadow: 2px 4.5px 4px 0px rgb(27, 26, 26);
 }
 a{
   text-decoration: none;
@@ -89,8 +89,7 @@ a{
   color:gold;
   font-size:1.1vw;
 }
-a:hover{
- }
+
  a {
   -webkit-transition: 0.4s;
   -moz-transition:  0.4s;
@@ -112,3 +111,65 @@ a:hover {
   height:115px;
   margin-left:-40px;
 }
+
+@media only screen and (max-width:900px) {
+  
+  #quote-box {
+    background-color: white;
+    margin: auto;
+    margin-top: 10vw;
+    height: 70vw;
+    width: 85vw;
+    border-radius: 3px;
+    box-shadow: 2px 3px 4px 6px #0001532c;
+  }
+  
+#text-area {
+  font-size: 7vw;
+  padding:2vw;
+  margin-top:1.5vw;
+  margin-left:1.5vw;
+  margin-right:1.5vw;
+}
+.button-container {
+  margin-top: 11vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+#new-quote-button{
+  margin-right: 7vw;
+  height: 8vw;
+  width:35vw;
+  font-size:5vw;
+  border-radius: 3px;
+}
+
+#twit-button {
+  height: 8vw;
+  width:35vw;
+  font-size:5vw;
+  border-radius: .1vw;
+ }
+  #back-button {
+    width:30vw;
+    height:8vw;
+    left:35vw;
+    font-size:5vw;
+    margin-top:11vw;
+    border-radius: 11px;
+    padding-top: 2vw;
+    box-shadow: 1px 3.5px 3px 0px rgb(27, 26, 26);
+  }
+  .btn:focus {
+    outline: none;
+    border:none;
+   
+  }
+  .btn:hover:active {
+    background-color: rgb(175, 166, 166);
+    border-color: black;
+    color:rgb(43, 41, 41);
+  }
+}
+
