--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
-/* 
-    Main css file with media queries in a separate named css file
-*/
+/*****************************************************************
+**  Main css file with media queries in a separate named css file
+*****************************************************************/
 
 body {
   background-color: #4457a8;
