--- a/styles/mediaQuery.css
+++ b/styles/mediaQuery.css
@@ -1,6 +1,6 @@
-/* 
-    Css file that holds the responsive media queries
-*/
+/******************************************************
+**  Css file that holds the responsive media queries
+******************************************************/
 
 /* Media query above 900 px */
 
