--- a/styles/main.css
+++ b/styles/main.css
@@ -13,10 +13,10 @@ body {
     font-family: verdana;
     padding-top: 16px;
     width: 100%;
-    height: 36px;
+    height: 40px;
     -webkit-box-shadow: 0px 3px 5px rgba(56, 56, 56, 0.795);
     -moz-box-shadow:    0px 3px 5px rgba(56, 56, 56, 0.795);
-    box-shadow:         0px 3px 5px rgba(56, 56, 56, 0.795);
+    box-shadow:         0px 3px 5px rgba(48, 47, 47, 0.795);
 }
 
 #gh-link {
@@ -29,10 +29,10 @@ body {
 #quote-box {
     background-color: white;
     margin: 0 auto;
-    margin-top: 80px;
+    margin-top: 70px;
     height: 21vw;
     width: 50vw;
-    border-radius: .1vw;
+    border-radius: 3px;
     box-shadow: 2px 3px 4px 6px #0001532c;
 }
 
@@ -75,6 +75,7 @@ body {
 }
 
 .btn {
+    border-radius: 4px;
     box-shadow: 2px 3px 4px 6px #0001532c;
     transition: 0.3s;
 }
