--- a/styles/mediaQuery.css
+++ b/styles/mediaQuery.css
@@ -16,6 +16,10 @@
 /* Media query below 900 px ------------------------------------------------ */
   
 @media only screen and (max-width:900px) {
+
+    #gh-link {
+        font-size: 22px;
+    }
     
     #quote-box {
         background-color: white;
